--- a/pom.xml
+++ b/pom.xml
@@ -57,9 +57,9 @@
 		</dependency>
 		<!-- Lombok -->
 		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
+    		<groupId>org.projectlombok</groupId>
+    		<artifactId>lombok</artifactId>
+    		<version>1.18.30</version> <scope>provided</scope>
 		</dependency>
 		<!-- 톰캣 Provided -->
 		<dependency>
