수강신청페이지 (삭제기능 제외) test완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,14 @@ spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
+# Mybatis 설정 파일 위치 지정
+mybatis.config-location=classpath:mybatis-config.xml
+
 # MyBatis
-mybatis.type-aliases-package=com.ldb.lms.dto
+mybatis.type-aliases-package=com.ldb.lms.dto.**
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 
-logging.level.org.mybatis=DEBUG
+#Log level
+logging.level.org.mybatis.spring=DEBUG
+logging.level.org.apache.ibatis=DEBUG
+logging.level.com.ldb.lms.mapper=TRACE
