devTools추가(jsp파일변경시 감지하여 리로스 다시로드가능)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,14 @@ mybatis.config-location=classpath:mybatis-config.xml
 mybatis.type-aliases-package=com.ldb.lms.dto.**
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 
+# 개발 시 JSP 캐시 비활성화 (운영 환경에서는 활성화 권장)
+spring.mvc.view.cache=false
+
+# DevTools가 파일을 감지하고 재시작을 트리거하도록 설정
+# 기본적으로 resources, static, templates 디렉토리는 제외되므로, JSP 디렉토리를 포함시켜야 합니다.
+# (JSP 파일이 /WEB-INF/views/ 에 있다고 가정)
+spring.devtools.restart.additional-paths=/WEB-INF/views/
+
 #Log level
 logging.level.org.mybatis.spring=DEBUG
 logging.level.org.apache.ibatis=DEBUG
