--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<!-- Spring Boot DevTools -->
+		<dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-devtools</artifactId>
+	        <scope>runtime</scope>
+	        <optional>true</optional>
+    	</dependency>
 		<!-- JSP 지원 -->
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
