donggon 로그인 회원가입50%

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,14 @@
 			<version>3.0.0</version>
 		</dependency>
 		<!--BCRypt-->
+		
+		<!--사진업로드관련-->
+		<dependency>
+    		<groupId>commons-fileupload</groupId>
+    		<artifactId>commons-fileupload</artifactId>
+    		<version>1.5</version>
+		</dependency>
+		
 		<!-- https://mvnrepository.com/artifact/org.mindrot/jbcrypt -->
 		<dependency>
     		<groupId>org.mindrot</groupId>
