--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,8 @@ spring.devtools.restart.additional-paths=/WEB-INF/views/
 logging.level.org.mybatis.spring=DEBUG
 logging.level.org.apache.ibatis=DEBUG
 logging.level.com.ldb.lms.mapper=TRACE
+
+#picture
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
