--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,19 @@
 		</dependency>
 		<!--BCRypt-->
 		
+		<!-- JavaMail 구현체 -->
+		<dependency>
+    		<groupId>com.sun.mail</groupId>
+    		<artifactId>javax.mail</artifactId>
+    		<version>1.6.2</version>
+		</dependency>
+		<!-- Java Activation Framework (JAF) -->
+		<dependency>
+    		<groupId>javax.activation</groupId>
+    		<artifactId>activation</artifactId>
+    		<version>1.1.1</version>
+		</dependency>
+		
 		<!--사진업로드관련-->
 		<dependency>
     		<groupId>commons-fileupload</groupId>
