--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,8 +22,11 @@ mybatis.mapper-locations=classpath:mapper/**/*.xml
 # 개발 시 JSP 캐시 비활성화 (운영 환경에서는 활성화 권장)
 spring.mvc.view.cache=false
 
+# http메서드요청 오버라이딩 해서 변경하도록 설정(ex: post->put) 
+spring.mvc.hiddenmethod.filter.enabled=true
+
 # DevTools가 파일을 감지하고 재시작을 트리거하도록 설정
-# 기본적으로 resources, static, templates 디렉토리는 제외되므로, JSP 디렉토리를 포함시켜야 합니다.
+# 기본적으로 resources, static, templates 디렉토리는 제외되므로, JSP 디렉토리를 포함시켜야함
 # (JSP 파일이 /WEB-INF/views/ 에 있다고 가정)
 spring.devtools.restart.additional-paths=/WEB-INF/views/
 
