강의등록,강의관리화면 aop처리, 인터셉터처리, 예외처리, CRUD작업 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,7 @@ logging.level.com.ldb.lms.mapper=TRACE
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# 메세지 인코딩 처리
+spring.messages.basename=messages
+spring.messages.encoding=UTF-8
