--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<!-- Spring Boot Security -->
+		<!--<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>-->
+		
 		<!-- Spring Boot DevTools -->
 		<dependency>
 	        <groupId>org.springframework.boot</groupId>
@@ -34,6 +41,44 @@
 	        <scope>runtime</scope>
 	        <optional>true</optional>
     	</dependency>
+    	
+    	<!-- Spring Valid -->
+    	<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		
+		<!--  AspectJ 라이브러리 -->
+	    <dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-aop</artifactId>
+	    </dependency>
+	
+	    <dependency>
+	        <groupId>org.aspectj</groupId>
+	        <artifactId>aspectjrt</artifactId>
+	        <version>1.9.7</version>
+	    </dependency>
+	
+	    <dependency>
+	        <groupId>org.aspectj</groupId>
+	        <artifactId>aspectjweaver</artifactId>
+	        <version>1.9.7</version>
+	    </dependency>
+		
+		<!-- Slf4j/Logback 설정 -->
+		<!--<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-api</artifactId>
+		    <version>2.0.9</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>ch.qos.logback</groupId>
+		    <artifactId>logback-classic</artifactId>
+		    <version>1.4.11</version>
+		</dependency>-->
+		
 		<!-- JSP 지원 -->
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
