성적관리 페이지 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,7 @@ spring.servlet.multipart.max-request-size=10MB
 # 메세지 인코딩 처리
 spring.messages.basename=messages
 spring.messages.encoding=UTF-8
+
+#spring에서 404발생시 기본에러컨트롤러호출이 아닌 NoHandlerFoundException호출
+#해당 에러 처리는 @ControllerAdvice or @RestcontrollerAdvice에서 처리
+spring.mvc.throw-exception-if-no-handler-found=true
