--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,3 +47,6 @@ spring.messages.encoding=UTF-8
 #spring에서 404발생시 기본에러컨트롤러호출이 아닌 NoHandlerFoundException호출
 #해당 에러 처리는 @ControllerAdvice or @RestcontrollerAdvice에서 처리
 spring.mvc.throw-exception-if-no-handler-found=true
+
+#로그 색상지정
+spring.output.ansi.enabled=ALWAYS
